2009-10-06  Pēteris Caune  <cuu508@gmail.com>

	* po/lv.po: Updated Latvian translation

2009-10-05  Oskar Welzl  <mail@welzl.info>

	* po/de.po: Updated German translation

2009-10-05  Dawid Pakuła  <zulus@w3des.net>

	* po/pl.po: Updated polish translation

2009-10-01  Víctor Manuel Jáquez Leal  <vjaquez@igalia.com>

	* src/vgl-object.h:
	Make refcount volatile to avoid strange compiler optimizations

2009-09-29  Alberto Garcia  <agarcia@igalia.com>

	* src/vgl-server.h
	* src/vgl-server.c
	(vgl_server_new, vgl_server_list_add, vgl_server_list_init):
	Add 'free_streams' attribute to VglServer to tell which servers
	only stream music that is freely downloadable.

	* src/protocol.h
	* src/protocol.c
	(lastfm_session_new, lastfm_parse_playlist)
	(lastfm_request_playlist, lastfm_request_custom_playlist)
	* src/lastfm-ws.c
	(lastfm_ws_get_session, lastfm_ws_radio_get_playlist):
	Add a 'free_stream' attribute to the legacy LastfmSession object.

	* src/protocol.c
	(lastfm_parse_track):
	Set track->free_track_url if that server streams only free music.

2009-09-29  Alberto Garcia  <agarcia@igalia.com>

	* src/protocol.c (lastfm_parse_track)
	* src/audio.c (lastfm_audio_play):
	Change the Jamendo stream URLs to MP3 when the playlist is being
	parsed.

2009-09-29  Alberto Garcia  <agarcia@igalia.com>

	* src/controller.c (check_session_thread):
	Add idle handler _before_ getting the extra data.

2009-09-19  Alberto Garcia  <agarcia@igalia.com>

	* src/dlwin.c (dlwin_download_file):
	Make sure that the 'text' string is NULL-terminated when the
	number of characters exceeds the buffer size.

2009-09-19  Alberto Garcia  <agarcia@igalia.com>

	* src/audio.c (bus_call, lastfm_audio_init, lastfm_audio_clear)
	Remove unused GMainLoop.

2009-09-18  Alberto Garcia  <agarcia@igalia.com>

	* configure.ac
	* src/Makefile.am
	* src/compat.[ch]
	Implementations of gdk_threads_add_* for old systems.

	* src/*.c
	Include "compat.h" when needed.
