@@ -1,3 +1,9 @@
+2009-10-08  Alberto Garcia  <agarcia@igalia.com>
+
+	* configure.ac
+	* src/audio.c:
+	Use #ifdef HAVE_DSPMP3SINK rather than #ifdef MAEMO in audio.c
+
 2009-10-06  Pēteris Caune  <cuu508@gmail.com>
 
 	* po/lv.po: Updated Latvian translation
